fix(Button): Restore missing border for secondary button (#2087)

--- a/packages/css/src/components/button/button.scss
+++ b/packages/css/src/components/button/button.scss
@@ -7,7 +7,6 @@
 @use "../../common/text-rendering" as *;
 
 @mixin reset-button {
-  border: none;
   margin-block: 0; // [1]
   margin-inline: 0; // [1]
 
@@ -59,10 +58,12 @@
 
 .ams-button--secondary {
   background-color: var(--ams-button-secondary-background-color);
+  border-color: var(--ams-button-secondary-border-color);
   color: var(--ams-button-secondary-color);
 
   &:disabled,
   [aria-disabled="true"] {
+    border-color: var(--ams-button-secondary-disabled-border-color);
     color: var(--ams-button-secondary-disabled-color);
   }
 
